@@ -59,14 +59,14 @@ object Form1: TForm1
     TabOrder = 4
     OnClick = btListChildsClick
   end
-  object Button1: TButton
-    Left = 435
+  object btDownload: TButton
+    Left = 416
     Height = 25
-    Top = 176
-    Width = 75
-    Caption = 'Button1'
+    Top = 168
+    Width = 123
+    Caption = 'Download'
     TabOrder = 5
-    OnClick = Button1Click
+    OnClick = btDownloadClick
   end
   object btSelect: TButton
     Left = 416
