@@ -1,6 +1,9 @@
 WIAPASCAL CHANGE LOG
 ======================
 
+2024/08/22 renamed TWIADevice.GetWiaDevice to GetWiaRootItem; 
+	   Download witch callback Test; 
+	   subChilds Names in demo; 
 2024/08/20 Added SelectDeviceDialog; Added in demo List Childs and SelectDeviceDialog
 2024/08/19 Porting to Delphi
 2024/06/05 Added TWIADevice.GetWiaDevice (Create the Device); 
